feat: add workspaces
